8034839: jvm hangs with gc/gctests/LoadUnloadGC test

Provide fast lookup of checked dependencies via hashmap

Reviewed-by: kvn, roland